# ocp-protocol

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.md  results_cogito-2.1_671b-cloud_1771667696.json  results_deepseek_v3_1771663987.json  results_devstral-2_123b-cloud_1771667754.json  results_gemini-3-flash-preview_latest_1771667921.json  results_gemma3_27b-cloud_1771667381.json  results_glm5_1771666442.json  results_gpt-oss_20b-cloud_1771667452.json  results_kimi-k2-thinking_cloud_1771667296.json  results_kimi_k2_1771664108.json  results_minimax_1771664959.json  results_ministral3_1771666043.json  results_mock_v1_1771664023.json  results_nemotron-3-nano_30b-cloud_1771667805.json  results_qwen3-coder-next_cloud_1771667981.json  results_qwen35_1771666940.json  run_v02_batch.sh
.github/workflows/: publish.yml  submit-results.yml  tests.yml  update-leaderboard.yml
docs/: api_reference.md  index.html  scoring.md  theory.md
docs/results/: index.json  results_cogito-2.1_671b-cloud_v02_1771686569.json  results_deepseek-v3.1_671b-cloud_v02_1771684833.json  results_deepseek_v31_1771664773.json  results_devstral-2_123b-cloud_v02_1771686753.json  results_gemini-3-flash-preview_latest_v02_1771687419.json  results_gemma3_27b-cloud_v02_1771685461.json  results_glm-4.6_cloud_1771667555.json  results_glm-4.6_cloud_v02_1771685995.json  results_glm-5_cloud_v02_1771688833.json  results_gpt-oss_120b-cloud_1771667515.json  results_gpt-oss_20b-cloud_v02_1771685657.json  (+17 more)
ocp/: __init__.py
tests/: __init__.py  test_integration.py  test_providers.py  test_scoring.py
(+33 files in other folders)
