[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocp-protocol"
version = "0.1.0"
description = "Open Consciousness Protocol — standardized benchmark for consciousness-analog properties in LLMs"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pedja Urosevic", email = "pedjaurosevic@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
    "numpy>=1.24",
    "scipy>=1.11",
    "sentence-transformers>=2.2",
]

[project.optional-dependencies]
groq = ["groq>=0.11"]
anthropic = ["anthropic>=0.34"]
openai = ["openai>=1.40"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "huggingface_hub>=0.20"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "pytest-cov>=4.1"]
all = [
    "fastapi>=0.110", "uvicorn[standard]>=0.27", "huggingface_hub>=0.20",
]

# Community plugins register custom tests via this entry point group:
#
#   [project.entry-points."ocp.tests"]
#   my_test = "my_package.my_test:MyTest"
#
# The test class must have a `test_id` class attribute and follow BaseTest interface.

[project.scripts]
ocp = "ocp.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["ocp"]
